; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_rt2880_wdt.c_rt288x_wdt_bootcause.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_rt2880_wdt.c_rt288x_wdt_bootcause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYSC_RSTSTAT = common dso_local global i32 0, align 4
@WDT_RST_CAUSE = common dso_local global i32 0, align 4
@WDIOF_CARDRESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @rt288x_wdt_bootcause to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rt288x_wdt_bootcause() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @SYSC_RSTSTAT, align 4
  %3 = call i32 @rt_sysc_r32(i32 %2)
  %4 = load i32, i32* @WDT_RST_CAUSE, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* @WDIOF_CARDRESET, align 4
  store i32 %8, i32* %1, align 4
  br label %10

9:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %10

10:                                               ; preds = %9, %7
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @rt_sysc_r32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
